# at_vision

./: .dockerignore  .gitignore  .swp  Dockerfile  vim
.devcontainer/: devcontainer.json
atvision_ws/src/rm_utils/: package.xml
atvision_ws/src/rm_utils/include/rm_utils/: common.hpp
atvision_ws/src/rm_utils/src/math/: trajectory_compensator.cpp
atvision_ws/src/ros2_hik_camera/: CMakeLists.txt
atvision_ws/src/usb_driver/: CMakeLists.txt  package.xml
atvision_ws/src/usb_driver/include/usb/: logger.hpp  packet.hpp
atvision_ws/src/vision/armor_detector/: CMakeLists.txt
atvision_ws/src/vision/armor_detector/model/: yolox_armor3.xml
atvision_ws/src/vision/armor_detector/src/: armor_detector.cpp  ba_solver.cpp  openvino.cpp  openvino_infer.cpp
atvision_ws/src/vision/armor_solver/src/: armor_solver_node.cpp
atvision_ws/src/vision/rm_auto_aim/: CMakeLists.txt  package.xml
atvision_ws/src/vision/rm_auto_aim/config/: config.yaml
atvision_ws/src/vision/rm_auto_aim/launch/: bringup.launch.py
atvision_ws/src/vision/rm_rune/rune_detector/: CMakeLists.txt  package.xml
atvision_ws/src/vision/solver/: .CMakeLists.txt
script/: clangd_format.sh  env.sh  install_tinympc.sh  upstart.sh  vision.service
src/core/: CMakeLists.txt  package.xml
src/core/include/util/: atmath.hpp  quiet_clang.hpp
src/hikcamera/: package.xml
src/hikcamera/src/: image_capturer.cpp
src/interfaces/: package.xml
src/rm_auto_aim/: CMakeLists.txt  package.xml
src/rm_auto_aim/config/: camera_info.yaml  config.yaml
src/rm_auto_aim/launch/: rm_auto_aim.launch.py
src/rm_auto_aim/src/: main.cpp
src/rm_gimbal_description/urdf/: rm_gimbal.urdf.xacro
src/rm_interfaces/: CMakeLists.txt
src/rm_utils/src/: heartbeat.cpp
src/ros2_hik_camera/: CMakeLists.txt
src/ros2_hik_camera/config/: camera_info.yaml  camera_params.yaml
src/ros2_hik_camera/include/: hik_camera_node.hpp
src/ros2_hik_camera/src/: hik_camera_node.cpp
src/usb_driver/: CMakeLists.txt  package.xml
src/usb_driver/include/usb/: packet.hpp  usb.hpp  usb_node.hpp
src/usb_driver/src/: main.cpp  usb,_node.cpp  usb.cpp
src/vision/armor_detector/: CMakeLists.txt  package.xml
src/vision/armor_detector/include/: camera.hpp  utility.hpp
src/vision/armor_detector/include/armor_detector/: armor.hpp  armor_detector.hpp  detector.hpp  detector_node.hpp  inference.hpp  number_classifier.hpp  openvino.hpp  parser.hpp  pnp_solver.hpp  types.hpp
src/vision/armor_detector/launch/: detector.launch.py
src/vision/armor_detector/model/: tup_label.txt
src/vision/armor_detector/src/: armor_detector.cpp  armor_detector_node.cpp  detector.cpp  detector_node.cpp  inference.cpp  light_corner_corrector.cpp  number_classifier.cpp  openvino_infer.cpp  parser.cpp  pnp_solver.cpp
src/vision/armor_solver/src/: armor_solver.cpp  armor_solver_node.cpp  armor_tracker.cpp
src/vision/armor_tracker/: CMakeLists.txt  package.xml
src/vision/armor_tracker/include/armor_tracker/: extended_kalman_filter.hpp  tracker.hpp  tracker_node.hpp
src/vision/armor_tracker/src/: extended_kalman_filter.cpp  tracker.cpp  tracker_node.cpp
src/vision/auto_aim_interfaces/: CMakeLists.txt
src/vision/auto_aim_interfaces/msg/: ControlCmd.msg  PlannedControlCmd.msg
src/vision/rm_auto_aim/: package.xml
src/vision/rm_auto_aim/config/: camera_info.yaml  config.yaml
src/vision/rm_auto_aim/launch/: bringup.launch.py  common.py  debug.launch.py  rm_auto_aim.launch.py
src/vision/rm_auto_aim/src/: main.cpp
src/vision/solver/: .package.xml  CMakeLists.txt  package.xml
src/vision/solver/include/solver/: ballistics.hpp  controller.hpp  planner.hpp  planner_node.hpp  target.hpp  trajectory_node.hpp
src/vision/solver/include/util/: rate.hpp
src/vision/solver/src/: controller.cpp  planner.cpp  planner_node.cpp  trajectory_node.cpp
src/vision/trajectory/: CMakeLists.txt  package.xml
src/vision/trajectory/src/: planner_node.cpp  trajectory_node.cpp
test/: coordinate.py  kalman.py  qp_damn.py
(+19 files in other folders)
